# controller

./: CMakeLists.txt  README.md  package.xml  result_min.csv
config/: acceleration.yaml  skidpad.yaml  trackdrive.yaml
include/: control.hpp  control_handle.hpp
include/Solver/: lqr_solver.h  mpc_ki_solver.h  mpc_kin_solver.h  mpc_lat.h  mpc_mine.h  mpc_osqp_solver.h  pid_controller.h  pure_pursuit_solver.h  solver_base.h  stanley_solver.h
include/Utils/: param.h  types.h
launch/: mpcc_fssim.launch  trackdrive.launch
src/: control.cpp  control_handle.cpp  main.cpp
src/Solver/: lqr_solver.cpp  mpc_ki_solver.cpp  mpc_kin_solver.cpp  mpc_lat.cpp  mpc_mine.cpp  mpc_osqp_solver.cpp  pid_controller.cpp  pure_pursuit_solver.cpp  stanley_solver.cpp
