<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.1.0</version>
  <description>Simple control node, that inputs "cone detections" and outputs array of points</description>
  <maintainer email="tairanchen@bitfsd.cn">chentairan</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
<build_depend>python-rosdep</build_depend>
<build_depend>python-catkin-pkg-modules</build_depend>

<exec_depend>python</exec_depend>
<exec_depend>numpy</exec_depend>
  <!--For custom message import-->
  <depend>fsd_common_msgs</depend>
  <depend>fssim_common</depend>
  <!--Other depends-->
  <depend>roscpp</depend>
    <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>fsd_tools</depend>



  <export>
  </export>
</package>


